test/expressions/noinit/usedWithRange.good
usedWithRange.chpl:1: error: the type of the actual argument 'r' is generic
note: generic actual arguments are not currently supported
