test/expressions/noinit/usedWithRange.chpl
var r: simpleRange = noinit;
r = 1..5;
writeln(r);
